<resources>
    <string name="app_name">TradeLink</string>
    <string name="btn_client">Client</string>
    <string name="btn_representative">Representative</string>
    <string name="title_tradelink">TradeLink</string>
    <string name="btn_login">LOG IN</string>
    <string name="text_view_register">Register</string>
    <string name="text_view_recover">Recover Password</string>
    <string name="hint_password">Password</string>
    <string name="text_view_client">Client</string>
    <string name="text_view_representative">Representative</string>
    <string name="text_view_title_new_account">New Account</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Professional email</string>
    <string name="your_password">Password</string>
    <string name="btn_new_register">Register</string>
    <string name="txt_view_phone">Phone</string>
    <string name="edit_text_city">City</string>
    <string name="edit_text_stade">State</string>
    <string name="edit_text_represented_company">Represented Company</string>
    <string name="edit_text_niche">Niche</string>
    <string name="user_created">User created successfully!</string>
    <string name="failed_create_user">Failed to create user: %1$s</string>
    <string name="fill_all_fields">Fill in all fields.</string>
    <string name="search">Search</string>
    <string name="company">Companies</string>
    <string name="title_page_representative">Representative Panel</string>
    <string name="btn_visits">Visit Requests</string>
    <string name="btn_catalog">Product Catalog</string>
    <string name="btn_new_sale">New Sale</string>
    <string name="btn_sales">Sales</string>
    <string name="title_visits">Visits</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_new_sale">New Sale</string>
    <string name="title_sales">Sales</string>
    <string name="edit_text_product_name">Product Name</string>
    <string name="edit_text_product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_save">Product saved successfully.</string>
    <string name="msg_fill_all_fields">Fill in all fields.</string>
    <string name="title_catalog_company">%1$s - Catalog</string>
    <string name="title_request_visit" translatable="false">Agendar Visita</string>
    <string name="edit_text_address">Address</string>
    <string name="btn_request_visit">Request Representative Visit</string>
    <string name="fill_data_message">Fill in your details to request a visit</string>
    <string name="msg_fill_fields">Please fill in all fields.</string>
    <string name="msg_confirm_request_visit">Visit request sent successfully.</string>
    <string name="text_view_title_visit">Visit requests</string>
    <string name="text_view_new_sales">New Sales</string>
    <string name="msg_none">No products in the catalog.</string>
    <string name="btn_add_product">Add Product</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="email_hint">Email</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="lock_icon_description">Lock Icon</string>
    <string name="enter_email_instruction">Please enter the email associated with your account</string>
    <string name="password_requirements">The password must be at least 6 characters long and contain at least one number.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="save_sale">Successfully saved sale.</string>
    <string name="error_save_sale">Error saving sale: %1$s</string>
    <string name="reset_email_empty">Please enter your email.</string>
    <string name="reset_password_sucess">A recovery email has been sent to %1$s</string>
    <string name="reset_password_error">Failed to send recovery email. Check your email and try again.</string>
</resources>