<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RepresentativeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title_page_representative"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.016" />

        <Button
            android:id="@+id/btnVisits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rectangle_button"
            android:drawableLeft="@drawable/ic_visit"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:text="@string/btn_visits"
            app:layout_constraintBottom_toTopOf="@+id/btnCatalog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnCatalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rectangle_button"
            android:drawableLeft="@drawable/ic_catalog"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:text="@string/btn_catalog"
            app:layout_constraintBottom_toTopOf="@+id/btnNewSale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnNewSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rectangle_button"
            android:drawableLeft="@drawable/ic_new_sale"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:text="@string/btn_new_sale"
            app:layout_constraintBottom_toTopOf="@+id/btnSales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="164dp"
            android:background="@drawable/rectangle_button"
            android:drawableLeft="@drawable/ic_sales"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:text="@string/btn_sales"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>